# Trilho

./: .gitignore  .prettierrc  DECISIONS.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.cursor/rules/: rebuild-and-run.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
e2e/: smoke.spec.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: trilho-commands.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/application/: app_state.rs  assistant_service.rs  audit_service.rs  backup_ref.rs  branch_origin.rs  clone_post_check.rs  clone_service.rs  llm_provider.rs  mod.rs  operations.rs  repo_context.rs  write_gates.rs  write_service.rs
src-tauri/src/application/branch_origin/: candidates.rs  mod.rs  scoring.rs
src-tauri/src/domain/: assistant.rs  audit.rs  blame.rs  branch_origin.rs  mod.rs  operation.rs  trilho_help.rs
src-tauri/src/infrastructure/: assistant_settings.rs  audit_log.rs  blame.rs  blame_parser.rs  branch_diff.rs  branch_order.rs  branches.rs  conflict.rs  credential.rs  git2_reader.rs  git_cli.rs  github_pat_store.rs  github_pr.rs  llm_credentials.rs  mod.rs  repo_watcher.rs  reword.rs  ssh_keys.rs  stashes.rs  status_parser.rs  tags.rs  upstream.rs  validation.rs  worktree_file.rs
src-tauri/src/infrastructure/llm/: mod.rs
src/components/: AppErrorBoundary.tsx  AssistantChat.tsx  AuditLogDialog.tsx  CommitRow.tsx  (+39 more)
(+43 files in other folders)
