[package]
name = "trilho"
version = "0.1.0"
description = "Trilho — visualizador e cliente Git minimalista para a trilha de commits."
authors = ["Trilho"]
edition = "2021"
rust-version = "1.77"

# Biblioteca compartilhada (padrão do Tauri 2: lib.rs + main.rs).
[lib]
name = "trilho_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Feature usada pelo Tauri em builds de produção.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
