[package]
name = "trilho"
version = "0.1.0"
description = "Trilho — visualizador e cliente Git minimalista para a trilha de commits."
authors = ["Trilho"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "trilho_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
